welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:4: error: reassignment to val
  	c = c + 1
          ^countTeen:7: error: value += is not a member of Int
  	c += 1
          ^countTeen:9: error: value += is not a member of Int
  	c += 1
          ^countTeen:11: error: value += is not a member of Int
  	c += 1
          ^